--- a/ssh/config.yaml
+++ b/ssh/config.yaml
@@ -3,7 +3,7 @@ version: 9.10.1
 slug: ssh
 name: Terminal & SSH
 description: Allow logging in remotely to Home Assistant using SSH
-url: https://github.com/home-assistant/addons/tree/master/ssh
+url: https://github.com/wx-ast/ha_ssh/tree/master/ssh
 codenotary: notary@home-assistant.io
 advanced: true
 arch:
@@ -16,7 +16,7 @@ audio: true
 hassio_api: true
 hassio_role: manager
 host_dbus: true
-image: homeassistant/{arch}-addon-ssh
+image: atyx/{arch}-addon-ssh
 ingress: true
 init: false
 map:
